--- a/OrEyni.Site/Client/src/app/components/customer/customer/customer.component.html
+++ b/OrEyni.Site/Client/src/app/components/customer/customer/customer.component.html
@@ -1,15 +1,14 @@
-
-<h1>
+<!--<h1>
   {{selectedCustomer?.FullName}}
-  </h1>
-<md-tab-group>
- 
-  <md-tab label="פרטים" >
+</h1>-->
+<md-tab-group (selectChange)="tabChanged($event)">
+
+  <md-tab label="פרטים">
     <h1>פרטים</h1>
     <app-customer-details [currentCustomer]="selectedCustomer"></app-customer-details>
   </md-tab>
   <md-tab label="פעילויות">
     <h1>פעילויות</h1>
-    <p>...</p>
+    <app-customer-activities [currentCustomer]="selectedCustomer"> </app-customer-activities>
   </md-tab>
 </md-tab-group>
