--- a/OrEyni.Site/Client/src/app/components/navmenu/navmenu.component.html
+++ b/OrEyni.Site/Client/src/app/components/navmenu/navmenu.component.html
@@ -1,48 +1,38 @@
-<div class='main-nav'>
-    <div class='navbar navbar-inverse'>
-        <div class='navbar-header'>
-            <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
-                <span class='sr-only'>Toggle navigation</span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-            </button>
-            <a class='navbar-brand' [routerLink]="['/home']">oreyni</a>
-        </div>
-        <div class='clearfix'></div>
-        <div class='navbar-collapse collapse'>
-            <ul class='nav navbar-nav'>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/home']">
+<md-toolbar>
+
+    <b>אור עיני - לוגו</b>
+    <div>
+        <b>ישראל ישראלי</b>
+        <button style="text-align:right">צא </button>
+    </div>
+
+    <md-toolbar-row color="black">
+        <a [routerLink]="['/home']">
                         <span class='glyphicon glyphicon-home'></span> Home
                     </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
+        <!-- <a [routerLink]="['/counter']">
                         <span class='glyphicon glyphicon-education'></span> Counter
                     </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+        <a [routerLink]="['/fetch-data']">
+                         Fetch data
                     </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/hello']">
+        <a [routerLink]="['/hello']">
                         <span class='glyphicon glyphicon-user'></span> Hello
                     </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/weather']">
+        <a [routerLink]="['/weather']">
                         <span class='glyphicon glyphicon-cloud'></span> City Weather
+                    </a>-->
+        <a [routerLink]="['/customers']">
+                        <span class='glyphicon glyphicon-cloud'></span> צור קשר
                     </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/customers']">
+        <a [routerLink]="['/customers']">
+                        <span class='glyphicon glyphicon-cloud'></span> פעילויות
+                    </a>
+        <a [routerLink]="['/customers']">
+                        <span class='glyphicon glyphicon-cloud'></span> אודותינו
+                    </a>
+        <a [routerLink]="['/customers']">
                         <span class='glyphicon glyphicon-cloud'></span> לקוחות
                     </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+    </md-toolbar-row>
+</md-toolbar>
