--- a/OrEyni.Site/Client/src/app/components/navmenu/navmenu.component.html
+++ b/OrEyni.Site/Client/src/app/components/navmenu/navmenu.component.html
@@ -28,11 +28,18 @@
         <a [routerLink]="['/customers']">
                         <span class='glyphicon glyphicon-cloud'></span> פעילויות
                     </a>
+        <a [routerLink]="['/managementOrEnay']">
+                        <span class='glyphicon glyphicon-cloud'></span> ניהול
+                    </a>
         <a [routerLink]="['/customers']">
                         <span class='glyphicon glyphicon-cloud'></span> אודותינו
                     </a>
         <a [routerLink]="['/customers']">
                         <span class='glyphicon glyphicon-cloud'></span> לקוחות
                     </a>
+        <a [routerLink]="['/donors']">
+                        <span class='glyphicon glyphicon-cloud'></span> תורמים
+                    </a>
+
     </md-toolbar-row>
 </md-toolbar>
