--- a/OrEyni.Site/Client/src/app/components/app/app.component.html
+++ b/OrEyni.Site/Client/src/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-    <nav-menu></nav-menu>
+    <nav-menu-start></nav-menu-start>
     <div class='row'>
 
         <div class='col-sm-12 body-content'>
